# uneven

./: Cargo.toml  README.md  default.nix  flake.nix  now.nix  package.nix  shell.nix  uneven.nix
.cix/: check.nix
.now/: format.nix  full_example.nix  matrix.nix
.now/tests/: jobs.nix  vars.nix
.tack/: pins.lock.json  pins.toml
.uneven/: check.nix  format.nix  matrix.nix
.uneven/tests/: env.nix  error.nix  upload.nix
nix/: default.nix  env.nix  module.nix  package.nix  types.nix  workflow.nix
now-step/: Cargo.toml  package.nix
now-step/src/: main.rs  main.zig  root.zig  run.rs  secrets.rs
src/: builder.rs  environment.rs  init.nix  job.rs  main.rs  project.rs  run.rs  secret.rs  step.rs  utils.rs  workflow.rs
src/builder/: local.rs  mod.rs  remote.rs
