[package]
name = "uneven"
version = "0.1.0"
edition = "2024"
description = "A Nix-based distributed command runner"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.7"
color-eyre = "0.6.5"
include_dir = "0.7.4"
owo-colors = "4.3.0"
petgraph = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.5", features = ["v4"] }
zeroize = "1.9.0"
