[package]
name = "now-runner"
version = "0.1.0"
edition = "2024"
description = "Nix-based distributed command runner"
license = "AGPL-3.0-or-later"

[[bin]]
name = "now"
path = "src/main.rs"

[workspace]
members = [ "now-step" ]

[dependencies]
async-trait = "0.1.91"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.7"
color-eyre = "0.6.5"
ctrlc = { version = "3.5.2", features = ["termination"] }
dotenvy = "0.15.7"
futures = "0.3.33"
ignore = "0.4.30"
include_dir = "0.7.4"
owo-colors = "4.3.0"
petgraph = "0.8.3"
rand = "0.10.2"
regex = "1.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
smol = "2.0.2"
sys-info = "0.9.1"
uuid = { version = "1.23.5", features = ["v4"] }
