[package]
name = "now-step"
version = "0.1.0"
edition = "2024"
description = "Step runner for now"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
